--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </a>
 
         <!-- Добавляем ссылки для "О сервере" и "Помощь" -->
-        <a href="help_page.html">
+        <a href="404.html">
             <div class="div3">Помощь</div>
         </a>
-        <a href="about_server_page.html">
+        <a href="404.html">
             <div class="div4">О сервере</div>
         </a>
 
