--- a/index.html
+++ b/index.html
@@ -18,24 +18,22 @@
 <body>
 
     <div class="div">
+        
         <img class="icon" alt="" src="фон корабль.png">
 
         <div class="div1"></div>
         <div class="div2"></div>
-        <img class="image-galaktic-conflict" alt="" src="image galaktic conflict.png">
-
-        <!-- Сделаем элементы кликабельными -->
-        <a href="page_galactic_conflict.html">
+        <a href="inwork.html">
+            <img class="image-galaktic-conflict" alt="" src="image galaktic conflict.png">
             <div class="galactic-conflict">Galactic conflict</div>
-        </a>
-
+          </a>
+          
+        <a href="inwork.html">
         <img class="image-half-lfe" alt="" src="image half lfe.png">
-        <a href="page_half_life.html">
             <div class="half-life">Half life</div>
         </a>
-
+        <a href="inwork.html">
         <img class="image-project-anomaly" alt="" src="image project anomaly.png">
-        <a href="page_project_anomaly.html">
             <div class="project-anomaly">Project anomaly</div>
         </a>
 
