--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="div1"></div>
         <div class="div2"></div>
-        <a href="inwork.html">
+        <a href="galactic_conflic.html">
             <img class="image-galaktic-conflict" alt="" src="image galaktic conflict.png">
             <div class="galactic-conflict">Galactic conflict</div>
           </a>
