--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <a href="404.html">
             <div class="div3">Помощь</div>
         </a>
-        <a href="404.html">
+        <a href="abaut.html">
             <div class="div4">О сервере</div>
         </a>
 
