--- a/galactic_conflic.html
+++ b/galactic_conflic.html
@@ -91,6 +91,22 @@
 
     // Повторное обновление данных каждую минуту
     setInterval(updateOnlinePlayers, 60000);
+    document.addEventListener('DOMContentLoaded', (event) => {
+    const galacticConflict = document.querySelector('.galactic-conflict');
+    let startY = 0;
+    let scrollTop = 0;
+
+    galacticConflict.addEventListener('touchstart', (e) => {
+        startY = e.touches[0].clientY;
+        scrollTop = galacticConflict.scrollTop;
+    });
+
+    galacticConflict.addEventListener('touchmove', (e) => {
+        const touchY = e.touches[0].clientY;
+        const touchYDelta = touchY - startY;
+        galacticConflict.scrollTop = scrollTop - touchYDelta;
+    });
+});
 </script>
 
 </html>
